--- a/service_1/application/templates/index.html
+++ b/service_1/application/templates/index.html
@@ -6,11 +6,12 @@
     <title>Document</title>
     <style>
         body {
-          background-color: green;
+          background-color: white;
         }
     </style>
 </head>
 <body>
-    <h1>It works</h1>
+    <h1>It is {{ weather }} in {{ location }} today </h1>
+    <h2>Movie today: {{ movie }} </h2>
 </body>
 </html>
