--- a/service_1/application/templates/index.html
+++ b/service_1/application/templates/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <style>
         body {
-          background-color: purple;
+          background-color: blanchedalmond;
         }
     </style>
 </head>
