testing jenkins by updating index file

--- a/service_1/application/templates/index.html
+++ b/service_1/application/templates/index.html
@@ -13,5 +13,9 @@
 <body>
     <h1>It is {{ weather }} in {{ location }} today </h1>
     <h2>Movie today: {{ movie }} </h2>
+    <br>
+    <br>
+    <br>
+    <h2>The Jenkins test worked!!</h2>
 </body>
 </html>
