Implemented jenkins pipeline

--- a/service_1/application/templates/index.html
+++ b/service_1/application/templates/index.html
@@ -6,12 +6,16 @@
     <title>Document</title>
     <style>
         body {
-          background-color: white;
+          background-color: blanchedalmond;
         }
     </style>
 </head>
 <body>
     <h1>It is {{ weather }} in {{ location }} today </h1>
     <h2>Movie today: {{ movie }} </h2>
+    <br>
+    <br>
+    <br>
+    <h2>The Jenkins test worked!!</h2>
 </body>
 </html>
