Updated movies service

--- a/service_1/application/templates/index.html
+++ b/service_1/application/templates/index.html
@@ -11,11 +11,9 @@
     </style>
 </head>
 <body>
-    <h1>It is {{ weather }} in {{ location }} today </h1>
-    <h2>Movie today: {{ movie }} </h2>
-    <br>
-    <br>
-    <br>
-    <h2>The sqlalchemy worked</h2>
+    <h1>Based on the location: {{location}} </h1> <br>
+    <h1>And the weather: {{weather}} </h1> <br>
+    <h2>The movie chosen: {{movie}} </h2>
+  
 </body>
 </html>
