--- a/service_1/application/templates/index.html
+++ b/service_1/application/templates/index.html
@@ -14,6 +14,13 @@
     <h1>Based on the location: {{location}} </h1> <br>
     <h1>And the weather: {{weather}} </h1> <br>
     <h2>The movie chosen: {{movie}} </h2>
+
+    Previous: <br>
+    {% for movie in previous_movies}
+        {{movie.id}} {{movie.name}} {{movie.location}} {{movie.weather}} <br>
+
+    {% endfor %}
+
   
 </body>
 </html>
