--- a/service_1/application/templates/index.html
+++ b/service_1/application/templates/index.html
@@ -16,7 +16,7 @@
     <h2>The movie chosen: {{movie}} </h2>
 
     Previous: <br>
-    {% for movie in previous_movies}
+    {% for movie in previous_movies %}
         {{movie.id}} {{movie.name}} {{movie.location}} {{movie.weather}} <br>
 
     {% endfor %}
