Updated index for rolling 2

--- a/service_1/application/templates/index.html
+++ b/service_1/application/templates/index.html
@@ -15,7 +15,7 @@
     <h2>A random location and weather will be generated, and based on the a movie will be chosen for you.</h2>
     <br>
     <h3>Your location: {{location}} </h3>
-    <h3>Your weather: {{weather}} </h3> <br>
+    <h3>Your weather: {{weather}} </h3> 
     <h3>Movie: <b> {{movie}} </b> </h3>
 
     <p>Previous refreshes:</p>
